--- a/_BLANK_config.yml
+++ b/_BLANK_config.yml
@@ -1,9 +1,9 @@
 # Site Data
-title: 
-tagline: 
-name: 
+title: jd bloggy wiki space
+tagline: fcknzs
+name: jd
 author_bio: >
-footer_description: >
+footer_description: > a dumping space of text and info i find
 notes_url: 
 profile_pic: 
 favicon: /assets/img/favicon.png
