--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "a dumping ground for misc info, text, jpegs and some thinking"
 footer_description:
   'a dumping ground for misc info, text, jpegs and some thinking'
 notes_url: "https://enjoyment-work.netlify.app"
-profile_pic: "https://brennanbrown.ca/img/avatar.jpg"
+profile_pic: "https://avatars.githubusercontent.com/u/102425282"
 favicon: /assets/img/favicon.png
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://enjoyment-work.netlify.app/" # the base hostname & protocol for your site, e.g. https://example.com
