--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site Data
 title: "/jd"
-tagline: " — a wiki bloggy space"
+tagline: "a wiki bloggy space"
 name: "/jd"
 
-description: "a dumping ground for misc info, text, jpegs and some thinking"
+# description: "a dumping ground for misc info, text, jpegs and some thinking"
 footer_description:
   'a dumping ground for misc info, text, jpegs and some thinking'
-notes_url: "https://enjoyment-work.netlify.app"
+# notes_url: "https://enjoyment-work.netlify.app"
 profile_pic: "https://avatars.githubusercontent.com/u/102425282"
 favicon: /assets/img/favicon.png
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://enjoyment-work.netlify.app/" # the base hostname & protocol for your site, e.g. https://example.com
+# url: "https://enjoyment-work.netlify.app/" # the base hostname & protocol for your site, e.g. https://example.com
 theme_color: white
 encoding: utf-8
 
