--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Data
 title: "/jd"
 tagline: "a wiki bloggy space"
-name: "/jd"
+# name: "/jd"
 
 description: "a dumping ground for misc info, text, jpegs and some thinking"
 
