--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ encoding: utf-8
 
 # Links and Social Media
 donate_link: 
-repository: https://github.com/brennanbrown/enjoyment-work
-github: 
+repository: 
+github: stbetc
 twitter: https://twitter.com/redjade_hu
 portfolio: 
 email: jdmakemedia@gmail.com
